# opencv_c-c-

./: .gitignore  README.md
edgeDetection/: CMakeLists.txt  EdgeDetecting.cpp  EdgeDetecting.h  FeatureDetection.cpp  FeatureDetection.h  ImageBasicOperations.cpp  ImageBasicOperations.h  ImageDB.cpp  ImageDB.h  KMeansImplementation.cpp  backgroundSubtract.cpp  backgroundSubtract.h  cannyTresh.cpp  cannyTresh.h  featureDetection.cpp  featureDetection.h  findContoursOutput.txt  imagePreparation.cpp  imagePreparation.h  km.cpp  km.h  main.cpp
edgeDetection/models/: ChessSquare.cpp  ChessSquare.h  ChessSquareMatrix.cpp  ChessSquareMatrix.h  ChessTableEdges.cpp  ChessTableEdges.h  PieceContour.cpp  PieceContour.h  PieceModel.cpp  PieceModel.h  PieceType.h  patch.cpp  patch.h
edgeDetection/src/: ContourDatabase.cpp  ContourDatabase.h  EdgeProcessing.cpp  EdgeProcessing.h  MogLearningSpeed.cpp  MogLearningSpeed.h  MotionProcessing.cpp  MotionProcessing.h  MoveValidity.cpp  MoveValidity.h  VideoProcessing.cpp  VideoProcessing.h
